--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-
+PROVIDER=csv
+REGIONS=us
+BOOKS=DraftKings,FanDuel,BetMGM,PointsBet,Pinnacle
+REF_FALLBACK_MARGIN=0.03
+KELLY_FRACTION=0.25
+MIN_EDGE=0.02
+REFRESH_SECONDS=60
