--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-PROVIDER=csv
+# --- Data Provider ---
+PROVIDER=oddsapi
+ODDS_API_KEY=71f72e989bdd9c7b5c5b4073db186e5d
 REGIONS=us
-BOOKS=DraftKings,FanDuel,BetMGM,PointsBet,Pinnacle
+
+# --- Sportsbooks to include ---
+BOOKS=DraftKings,FanDuel,BetMGM,Caesars,ESPN BET,bet365,BetRivers,Fanatics,Unibet,BetUS,Underdog,PrizePicks,Sleeper
+
+# --- EV Finder settings ---
 REF_FALLBACK_MARGIN=0.03
 KELLY_FRACTION=0.25
 MIN_EDGE=0.02
